metpx-sr3c (3.23.03) UNRELEASED; urgency=medium

  * adding support for metrics.

 -- Peter <peter@bsqt.homeip.net>  Sun, 12 Mar 2023 23:17:55 -0400

metpx-sr3c (3.23.02) unstable; urgency=medium

  * bugfix #51: can bind to multiple exchanges+subtopic combinations (like
    python.)
  * bugfix #97: addding regex strip support.
  * internal variable to sr3: post_rate_limit -> messageRateMax
  * bugfix for problem with accept/reject mapping of renames. 
  * add self-test support for testing installed version.

 -- Peter <peter@bsqt.homeip.net>  Sun, 29 Jan 2023 09:02:55 -0500

metpx-sr3c (3.23.01p3) unstable; urgency=medium

  * added realpathAdjust integer option 

 -- Peter <peter@bsqt.homeip.net>  Sat, 28 Jan 2023 20:00:14 -0500

metpx-sr3c (3.23.01p2) unstable; urgency=medium

  * fix for core dump in shim library on bad credentials.
  * set argument parsing improved (now replaced, unless + prefix.)
  * added env var BROKER and EXCHANGE for CI/CD tests.

 -- Peter <peter@bsqt.homeip.net>  Thu, 26 Jan 2023 22:02:06 -0500

metpx-sr3c (3.23.01p1) unstable; urgency=medium

  * adding directory (mkdir, rmdir) event support  #104

 -- Peter <peter@bsqt.homeip.net>  Wed, 11 Jan 2023 13:50:21 -0500

metpx-sr3c (3.23.01) unstable; urgency=medium

  * working on #101 moving symlinks results in file, instead of link (only with relpathPost set.)
  * fix for #94 (not sure if it covers all cases.)
  * mv symlink -> compound fileOp: { "rename":"toto", "link": "target" }, 
  * added CI/CD testing. 
  * dup memory added, so duped files are closed once.
  * print format now looks like v03 messages instead of v2
  * realpath_filter defaults to true now.
  * removed support for from_cluster, to_cluster
  * some variable internal names updated to reflect v2->sr3
  * new default: when post_baseUrl use file:/... use /... to set post_baseDir.
  * when SR_SHIMDEBUG is set, it automatically turns on logLevel Debug.

 -- Peter Silva <peter@bsqt.homeip.net>  Mon, 19 Dec 2022 22:44:00 -0500